Implements dynamic team member loading
Replaces the static team member list with a dynamically loaded grid populated from JSON data.

This change allows for easier updates to the team roster without requiring modifications to the HTML.
It also introduces a character sheet modal that displays detailed information about each team member.

Fixes display of team member information and streamlines content updates.

--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/character-sheet.css">
 </head>
 <body>
     <!-- Starfield Background -->
@@ -91,142 +92,8 @@
             <h2>Meet the Team</h2>
             <p>The creative minds behind Eridan Games Studio, bringing diverse talents and shared passion to every project.</p>
         </div>
-        <div class="team-grid">
-            <div class="team-member">
-                <div class="member-image">
-                    <img src="content/images/placeholder-user.jpg" alt="Dino">
-                    <div class="member-overlay">
-                        <div class="member-social">
-                            <a href="#" aria-label="Twitter">🐦</a>
-                            <a href="#" aria-label="LinkedIn">💼</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="member-info">
-                    <h3>Dino</h3>
-                    <p class="member-role">Founder & Lead Designer</p>
-                    <p class="member-bio">Visionary game designer with 8+ years crafting immersive board game experiences. Passionate about creating worlds where every choice matters.</p>
-                </div>
-            </div>
-
-            <div class="team-member">
-                <div class="member-image">
-                    <img src="content/images/placeholder-user.jpg" alt="Tom">
-                    <div class="member-overlay">
-                        <div class="member-social">
-                            <a href="#" aria-label="Twitter">🐦</a>
-                            <a href="#" aria-label="LinkedIn">💼</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="member-info">
-                    <h3>Tom</h3>
-                    <p class="member-role">Lead Narrative Designer</p>
-                    <p class="member-bio">Master storyteller weaving intricate lore and compelling characters. Brings the Rule of Rika universe to life through rich, immersive narratives.</p>
-                </div>
-            </div>
-
-            <div class="team-member">
-                <div class="member-image">
-                    <img src="content/images/placeholder-user.jpg" alt="Borjan">
-                    <div class="member-overlay">
-                        <div class="member-social">
-                            <a href="#" aria-label="Twitter">🐦</a>
-                            <a href="#" aria-label="LinkedIn">💼</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="member-info">
-                    <h3>Borjan</h3>
-                    <p class="member-role">Gameplay Systems Designer</p>
-                    <p class="member-bio">Systems architect who transforms creative visions into elegant, balanced mechanics. Expert in creating engaging gameplay loops that keep players coming back.</p>
-                </div>
-            </div>
-
-            <div class="team-member">
-                <div class="member-image">
-                    <img src="content/images/placeholder-user.jpg" alt="Nikola">
-                    <div class="member-overlay">
-                        <div class="member-social">
-                            <a href="#" aria-label="Twitter">🐦</a>
-                            <a href="#" aria-label="LinkedIn">💼</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="member-info">
-                    <h3>Nikola</h3>
-                    <p class="member-role">RPG Systems Lead</p>
-                    <p class="member-bio">Therapeutic RPG specialist crafting meaningful player experiences. Designs systems that promote growth, connection, and personal discovery through play.</p>
-                </div>
-            </div>
-
-            <div class="team-member">
-                <div class="member-image">
-                    <img src="content/images/placeholder-user.jpg" alt="Sven">
-                    <div class="member-overlay">
-                        <div class="member-social">
-                            <a href="#" aria-label="Twitter">🐦</a>
-                            <a href="#" aria-label="LinkedIn">💼</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="member-info">
-                    <h3>Sven</h3>
-                    <p class="member-role">Community Manager & Producer</p>
-                    <p class="member-bio">Bridge between our studio and the community. Ensures every player's voice is heard while keeping projects on track and teams aligned.</p>
-                </div>
-            </div>
-
-            <div class="team-member">
-                <div class="member-image">
-                    <img src="content/images/placeholder-user.jpg" alt="Vuk">
-                    <div class="member-overlay">
-                        <div class="member-social">
-                            <a href="#" aria-label="Twitter">🐦</a>
-                            <a href="#" aria-label="LinkedIn">💼</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="member-info">
-                    <h3>Vuk</h3>
-                    <p class="member-role">Art Director</p>
-                    <p class="member-bio">Visual storyteller bringing our worlds to life through stunning artwork. Creates the visual language that defines the Rule of Rika universe.</p>
-                </div>
-            </div>
-
-            <div class="team-member">
-                <div class="member-image">
-                    <img src="content/images/placeholder-user.jpg" alt="Matija">
-                    <div class="member-overlay">
-                        <div class="member-social">
-                            <a href="#" aria-label="Twitter">🐦</a>
-                            <a href="#" aria-label="LinkedIn">💼</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="member-info">
-                    <h3>Matija</h3>
-                    <p class="member-role">World Designer</p>
-                    <p class="member-bio">Architect of immersive game worlds, crafting detailed environments that feel lived-in and authentic. Every location tells a story.</p>
-                </div>
-            </div>
-
-            <div class="team-member">
-                <div class="member-image">
-                    <img src="content/images/placeholder-user.jpg" alt="Siniša">
-                    <div class="member-overlay">
-                        <div class="member-social">
-                            <a href="#" aria-label="Twitter">🐦</a>
-                            <a href="#" aria-label="LinkedIn">💼</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="member-info">
-                    <h3>Siniša</h3>
-                    <p class="member-role">Game Designer</p>
-                    <p class="member-bio">Innovative designer pushing creative boundaries with fresh mechanics and unexpected gameplay twists. Always exploring new ways to surprise and delight players.</p>
-                </div>
-            </div>
+        <div id="team-members-container" class="team-members-grid">
+            <!-- Team members will be loaded dynamically here -->
         </div>
     </section>
 
@@ -347,5 +214,7 @@
 
     <script src="js/starfield.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/character-sheet.js"></script>
+    <script src="js/team-loader.js"></script>
 </body>
 </html>
