Updates team member profiles and UI
Refactors team member data structure to use strengths and
weaknesses instead of traits.

Adjusts character sheet UI to display abilities as progress bars
and improve overall layout.

Adds newsletter signup script to several pages.

--- a/game.html
+++ b/game.html
@@ -179,5 +179,6 @@
     <script src="js/starfield.js"></script>
     <script src="js/script.js"></script>
     <script src="js/game-page.js"></script>
+    <script src="js/newsletter.js"></script>
 </body>
 </html>
