--- a/worlds.html
+++ b/worlds.html
@@ -114,5 +114,6 @@
 
     <script src="js/starfield.js"></script>
     <script src="js/worlds.js"></script>
+    <script src="js/newsletter.js"></script>
 </body>
 </html>
