--- a/about.html
+++ b/about.html
@@ -216,5 +216,6 @@
     <script src="js/script.js"></script>
     <script src="js/character-sheet.js"></script>
     <script src="js/team-loader.js"></script>
+    <script src="js/newsletter.js"></script>
 </body>
 </html>
