--- a/games.html
+++ b/games.html
@@ -117,5 +117,6 @@
     <script src="js/starfield.js"></script>
     <script src="js/script.js"></script>
     <script src="js/games.js"></script>
+    <script src="js/newsletter.js"></script>
 </body>
 </html>
