--- a/world.html
+++ b/world.html
@@ -127,5 +127,6 @@
     <script src="js/starfield.js"></script>
     <script src="js/script.js"></script>
     <script src="js/world-page.js"></script>
+    <script src="js/newsletter.js"></script>
 </body>
 </html>
