Updates site-wide links to the new Wiki
Connects all "Wiki" links to the new, external wiki page.
Also corrects a few discrepancies in image paths and urls.
Changes the site logo to use a transparent version.

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - Eridan Games Studio</title>
-    <link rel="icon" type="image/png" href="content/images/eridan-logo-2.png">
+    <link rel="icon" type="image/png" href="content/images/eridan-logo-2-transparent.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -26,7 +26,7 @@
             <li><a href="games.html">Games</a></li>
             <li><a href="worlds.html">Worlds</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="#">Wiki</a></li>
+            <li><a href="https://eridan-studios.github.io/eridan-wiki/">Wiki</a></li>
         </ul>
         <button class="mobile-menu-toggle" aria-label="Toggle mobile menu">
             <span></span>
