--- a/game.html
+++ b/game.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="page-title">Game - Eridan Games</title>
-    <link rel="icon" type="image/png" href="content/images/eridan-logo-2.png">
+    <link rel="icon" type="image/png" href="content/images/eridan-logo-2-transparent.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -25,7 +25,7 @@
             <li><a href="games.html">Games</a></li>
             <li><a href="worlds.html">Worlds</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="#">Wiki</a></li>
+            <li><a href="https://eridan-studios.github.io/eridan-wiki/">Wiki</a></li>
         </ul>
         <button class="mobile-menu-toggle" aria-label="Toggle mobile menu">
             <span></span>
@@ -42,7 +42,7 @@
                     Loading game information...
                 </p>
                 <div class="wiki-link">
-                    <a href="#" id="game-wiki-link" class="cta-secondary">📖 Learn More in the Wiki</a>
+                    <a href="https://eridan-studios.github.io/eridan-wiki/" id="game-wiki-link" class="cta-secondary">📖 Learn More in the Wiki</a>
                 </div>
             </div>
             <div class="game-hero-right">
