Adds design philosophy page and content
Introduces a new "Design Philosophy" page detailing the studio's core principles, world-building approach, game design philosophy, and AI usage guidelines.

Refactors the "artist-banner" section into a more generic "content-banner", and adds it to the homepage, linking to the new philosophy page.

Updates navigation and footer links to include the new page, and includes the link to the eridan wiki.

Renames the main logo file.

--- a/about.html
+++ b/about.html
@@ -23,6 +23,7 @@
         </div>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
+            <li><a href="design-philosophy.html">Design Philosophy</a></li>
             <li><a href="games.html">Games</a></li>
             <li><a href="worlds.html">Worlds</a></li>
             <li><a href="about.html">About</a></li>
@@ -194,11 +195,13 @@
                         <a href="games.html" class="cta-tertiary">Games</a>
                         <a href="worlds.html" class="cta-tertiary">Worlds</a>
                         <a href="about.html" class="cta-tertiary">About Us</a>
+                        <a href="design-philosophy.html" class="cta-tertiary">Design Philosophy</a>
                     </div>
                     
                     <div class="footer-column">
                         <h3>Community</h3>
                         <a href="https://discord.gg/D9cjBrynr2" class="cta-tertiary" target="_blank">Discord</a>
+                        <a href="https://eridan-studios.github.io/eridan-wiki/" class="cta-tertiary" target="_blank">Wiki</a>
                         <a href="#" class="cta-tertiary">YouTube</a>
                         <a href="#" class="cta-tertiary">Gamefound</a>
                         <a href="#" class="cta-tertiary">Twitter</a>
