--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         </div>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="design-philosophy.html">Design Philosophy</a></li>
             <li><a href="games.html">Games</a></li>
             <li><a href="worlds.html">Worlds</a></li>
             <li><a href="about.html">About</a></li>
@@ -41,10 +40,6 @@
             <div class="hero-text">
                 <h1>Where shores meet <span class="accent">stars</span></h1>
                 <p>Worlds filled with wonder, challenge, and contrast where your choices shape the narrative.</p>
-                <div class="hero-buttons">
-                    <a href="https://discord.gg/D9cjBrynr2" class="cta-primary" target="_blank">Join our Discord</a>
-                    <a href="#newsletter" class="cta-primary">Subscribe to Newsletter</a>
-                </div>
             </div>
             <div class="hero-carousel">
                 <div class="carousel-track" id="carousel-track">
@@ -59,12 +54,15 @@
         </div>
     </section>
 
-    <!-- Design Philosophy Banner -->
+    <!-- Community Banner -->
     <div class="content-banner">
-        <h1 class="accent-green">Design Philosophy</h1>
+        <h1 class="accent-green">Join Our Community</h1>
         <div class="banner-content">
-            <p>Immersive worlds. Meaningful choices. Stories you help create. Our games challenge you to think differently about the realities you inhabit.</p>
-            <a href="design-philosophy.html" class="cta-primary">Explore Our Philosophy →</a>
+            <p>Connect with fellow adventurers, share your stories, and stay updated on our latest developments. Be part of the journey as we craft new worlds together.</p>
+            <div class="community-buttons">
+                <a href="https://discord.gg/D9cjBrynr2" class="cta-primary" target="_blank">Join our Discord</a>
+                <a href="#newsletter" class="cta-primary">Subscribe to Newsletter</a>
+            </div>
         </div>
     </div>
 
@@ -125,7 +123,6 @@
                         <a href="games.html" class="cta-tertiary">Games</a>
                         <a href="worlds.html" class="cta-tertiary">Worlds</a>
                         <a href="about.html" class="cta-tertiary">About Us</a>
-                        <a href="design-philosophy.html" class="cta-tertiary">Design Philosophy</a>
                     </div>
                     
                     <div class="footer-column">
