Improves site reliability with domain fallback
Ensures site availability by implementing a domain fallback mechanism.

This allows the site to continue functioning even if the primary domain
is unavailable, using GitHub Pages as a backup. This is achieved by:
- Introducing a domain configuration class.
- Modifying all content fetches to use the new domain configuration.
- Disabling Discord link.

This change enhances user experience by minimizing potential downtime.

--- a/about.html
+++ b/about.html
@@ -198,11 +198,10 @@
                     
                     <div class="footer-column">
                         <h3>Community</h3>
-                        <a href="https://discord.gg/D9cjBrynr2" class="cta-tertiary" target="_blank">Discord</a>
+                        <a class="cta-tertiary disabled">Discord</a>
                         <a href="https://eridan-studios.github.io/eridan-wiki/" class="cta-tertiary" target="_blank">Wiki</a>
                         <a href="#" class="cta-tertiary">YouTube</a>
                         <a href="#" class="cta-tertiary">Gamefound</a>
-                        <a href="#" class="cta-tertiary">Twitter</a>
                     </div>
                 </div>
             </div>
@@ -213,6 +212,7 @@
         </div>
     </footer>
 
+    <script src="js/domain-config.js"></script>
     <script src="js/starfield.js"></script>
     <script src="js/script.js"></script>
     <script src="js/character-sheet.js"></script>
