--- a/world.html
+++ b/world.html
@@ -37,18 +37,18 @@
     <!-- World Hero Banner -->
     <section class="world-hero">
         <div class="world-hero-content">
-            <div class="world-hero-left">
+            <div class="world-hero-image">
                 <div class="world-banner">
                     <img id="world-banner-image" src="" alt="">
                 </div>
             </div>
-            <div class="world-hero-right">
+            <div class="world-hero-text">
                 <p class="world-description" id="world-description">
                     Loading world information...
                 </p>
-                <div class="wiki-link">
-                    <a href="https://eridan-studios.github.io/eridan-wiki/" id="wiki-link" class="cta-secondary">📖 Dive Deeper into the Wiki</a>
-                </div>
+            </div>
+            <div class="wiki-link">
+                <a href="https://eridan-studios.github.io/eridan-wiki/" id="wiki-link" class="cta-secondary">📖 Dive Deeper into the Wiki</a>
             </div>
         </div>
     </section>
@@ -110,11 +110,10 @@
                     
                     <div class="footer-column">
                         <h3>Community</h3>
-                        <a href="https://discord.gg/D9cjBrynr2" class="cta-tertiary" target="_blank">Discord</a>
+                        <a class="cta-tertiary disabled">Discord</a>
                         <a href="https://eridan-studios.github.io/eridan-wiki/" class="cta-tertiary" target="_blank">Wiki</a>
                         <a href="#" class="cta-tertiary">YouTube</a>
                         <a href="#" class="cta-tertiary">Gamefound</a>
-                        <a href="#" class="cta-tertiary">Twitter</a>
                     </div>
                 </div>
             </div>
@@ -125,6 +124,7 @@
         </div>
     </footer>
 
+    <script src="js/domain-config.js"></script>
     <script src="js/starfield.js"></script>
     <script src="js/script.js"></script>
     <script src="js/world-page.js"></script>
