--- a/games.html
+++ b/games.html
@@ -77,11 +77,10 @@
                     
                     <div class="footer-column">
                         <h3>Community</h3>
-                        <a href="https://discord.gg/D9cjBrynr2" class="cta-tertiary" target="_blank">Discord</a>
+                        <a class="cta-tertiary disabled">Discord</a>
                         <a href="https://eridan-studios.github.io/eridan-wiki/" class="cta-tertiary" target="_blank">Wiki</a>
                         <a href="#" class="cta-tertiary">YouTube</a>
                         <a href="#" class="cta-tertiary">Gamefound</a>
-                        <a href="#" class="cta-tertiary">Twitter</a>
                     </div>
                 </div>
             </div>
@@ -115,6 +114,7 @@
         </div>
     </template>
 
+    <script src="js/domain-config.js"></script>
     <script src="js/starfield.js"></script>
     <script src="js/script.js"></script>
     <script src="js/games.js"></script>
