--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
         <div class="banner-content">
             <p>Connect with fellow adventurers, share your stories, and stay updated on our latest developments. Be part of the journey as we craft new worlds together.</p>
             <div class="community-buttons">
-                <a href="https://discord.gg/D9cjBrynr2" class="cta-primary" target="_blank">Join our Discord</a>
+                <span class="cta-primary disabled">Join our Discord</span>
                 <a href="#newsletter" class="cta-primary">Subscribe to Newsletter</a>
+                <a href="#" class="cta-primary" target="_blank">Follow us on Youtube</a>
             </div>
         </div>
     </div>
@@ -127,11 +128,10 @@
                     
                     <div class="footer-column">
                         <h3>Community</h3>
-                        <a href="https://discord.gg/D9cjBrynr2" class="cta-tertiary" target="_blank">Discord</a>
+                        <a class="cta-tertiary disabled">Discord</a>
                         <a href="https://eridan-studios.github.io/eridan-wiki/" class="cta-tertiary" target="_blank">Wiki</a>
                         <a href="#" class="cta-tertiary">YouTube</a>
                         <a href="#" class="cta-tertiary">Gamefound</a>
-                        <a href="#" class="cta-tertiary">Twitter</a>
                     </div>
                 </div>
             </div>
@@ -179,6 +179,7 @@
     </template>
 
 
+    <script src="js/domain-config.js"></script>
     <script src="js/starfield.js"></script>
     <script src="js/script.js"></script>
     <script src="js/index.js"></script>
