Reworks game card design and functionality
Updates the game card template to improve visual presentation
and information display.

Replaces the link with a div element and adds a click listener
to redirect to the game details page.

Adds platform tags and improves the display of game descriptions.

Removes gallery navigation and related logic for a cleaner
and more consistent user experience.

--- a/index.html
+++ b/index.html
@@ -144,22 +144,25 @@
 
     <!-- Game Card Template -->
     <template id="game-card-template">
-        <a href="#" class="game-card">
+        <div class="game-card-games">
             <div class="game-card-image">
                 <img src="" alt="">
                 <div class="status-badge"></div>
-                <div class="game-gallery" style="display: none;">
-                    <!-- Gallery images will be populated dynamically -->
-                </div>
             </div>
             <div class="game-card-content">
                 <h3></h3>
                 <p></p>
+                <div class="game-platforms">
+                    <!-- Platforms will be populated dynamically -->
+                </div>
                 <div class="game-tags">
                     <!-- Tags will be populated dynamically -->
                 </div>
             </div>
-        </a>
+            <div class="game-card-footer">
+                Learn more →
+            </div>
+        </div>
     </template>
 
     <!-- World Card Template -->
